added event city and product selection

--- a/default/data/ui/views/admincontrolpanel.xml
+++ b/default/data/ui/views/admincontrolpanel.xml
@@ -26,6 +26,9 @@
         <li>
           <a href="appdatacompetitionhtml">Add / Delete Competition</a>
         </li>
+        <li>
+          <a href="appdataproducthtml">Add / Delete Product</a>
+        </li>
       </ul>
     </html>
   </row>
