--- a/default/data/ui/views/betawelcome.xml
+++ b/default/data/ui/views/betawelcome.xml
@@ -62,7 +62,7 @@
 
 <p><a href="http://t.splunkstart.com:8000">You can access the Splunk App here</a>.</p>
 
-<p>Using the Splunk Mobile App? You can access this app via our mobile server address: t.splunkstart.com:443</p>
+<p>Using the <a href="http://www.splunk.com/view/splunk-introduces-the-splunk-mobile-app/SP-CAAAM7A">Splunk Mobile App</a>? You can access visualisations in this app via our mobile server address: t.splunkstart.com:443</p>
 
 <p><b>I will email your username and password separately when sending the app file.</b></p>
 
