--- a/default/data/ui/views/leadstats.xml
+++ b/default/data/ui/views/leadstats.xml
@@ -1,16 +1,23 @@
 <form>
   <label>Lead Stats</label>
-  <fieldset submitButton="false">
-    <input type="dropdown" token="eventIdToken" searchWhenChanged="true">
-      <label>Event ID</label>
+  <fieldset submitButton="true">
+    <input type="dropdown" token="indexToken">
+      <label>index</label>
+      <choice value="*">All</choice>
+      <choice value="splunkevents">Live</choice>
+      <choice value="test_splunkevents">Test</choice>
+      <prefix>index=</prefix>
+    </input>
+    <input type="multiselect" token="eventIdToken">
+      <label>event id</label>
       <search>
-        <query>search index=* | fields event_id</query>
+        <query>index=* | fields event_id</query>
       </search>
       <fieldForLabel>event_id</fieldForLabel>
       <fieldForValue>event_id</fieldForValue>
       <prefix>event_id=</prefix>
-      <choice value="*">All</choice>
-      <default>*</default>
+      <delimiter>,</delimiter>
+      <choice value="*">All Events</choice>
     </input>
   </fieldset>
   <row>
@@ -18,7 +25,9 @@
       <chart>
         <title>Products Discussed (all time)</title>
         <search>
-          <query>index="test_splunkevents" $eventIdToken$ |  eval competitionSplitted=split(competition, ",") | stats count by competitionSplitted | sort -count</query>
+          <query>$indexToken$ $eventIdToken$ |  eval competitionSplitted=split(competition, ",") | stats count by competitionSplitted | sort -count</query>
+          <earliest>0</earliest>
+          <latest></latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
@@ -47,8 +56,9 @@
       <chart>
         <title>Use Cases Discussed (all time)</title>
         <search>
-          <query>index="test_splunkevents" $eventIdToken$ |  eval usecaseSplitted=split(use_case, ",") | stats count by usecaseSplitted | sort -count</query>
+          <query>$indexToken$ $eventIdToken$ |  eval usecaseSplitted=split(use_case, ",") | stats count by usecaseSplitted | sort -count</query>
           <earliest>0</earliest>
+          <latest></latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
@@ -79,8 +89,9 @@
       <chart>
         <title>Shirts Given Away by Time (all time)</title>
         <search>
-          <query>index="test_splunkevents" $eventIdToken$ | timechart count</query>
+          <query>$indexToken$ $eventIdToken$ | timechart count</query>
           <earliest>0</earliest>
+          <latest></latest>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
@@ -109,7 +120,9 @@
       <table>
         <title>Companies we've spoken to most (all time)</title>
         <search>
-          <query>index="test_splunkevents" $eventIdToken$ | rename lead_details.company_email AS email  | eval accountname=split(email,"@")  | eval from_domain=mvindex(accountname,-1)| top limit=10 from_domain | table from_domain, count | sort -count</query>
+          <query>$indexToken$ $eventIdToken$ | rename lead_details.company_email AS email  | eval accountname=split(email,"@")  | eval from_domain=mvindex(accountname,-1)| top limit=10 from_domain | table from_domain, count | sort -count</query>
+          <earliest>0</earliest>
+          <latest></latest>
         </search>
         <option name="wrap">true</option>
         <option name="rowNumbers">false</option>
