--- a/default/data/ui/views/leadstats.xml
+++ b/default/data/ui/views/leadstats.xml
@@ -1,22 +1,15 @@
 <form>
   <label>Lead Stats</label>
   <fieldset submitButton="true">
-    <input type="dropdown" token="indexToken">
-      <label>index</label>
-      <choice value="*">All</choice>
-      <choice value="splunkevents">Live</choice>
-      <choice value="test_splunkevents">Test</choice>
-      <prefix>index=</prefix>
-    </input>
     <input type="multiselect" token="eventIdToken">
       <label>event id</label>
       <search>
-        <query>index=* | fields event_id</query>
+        <query>index=splunkevents | fields event_id</query>
       </search>
       <fieldForLabel>event_id</fieldForLabel>
       <fieldForValue>event_id</fieldForValue>
       <prefix>event_id=</prefix>
-      <delimiter>,</delimiter>
+      <delimiter> OR </delimiter>
       <choice value="*">All Events</choice>
     </input>
   </fieldset>
@@ -25,7 +18,7 @@
       <chart>
         <title>Products Discussed (all time)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ |  eval competitionSplitted=split(competition, ",") | stats count by competitionSplitted | sort -count</query>
+          <query>index=splunkevents $eventIdToken$ |  eval competitionSplitted=split(competition, ",") | stats count by competitionSplitted | sort -count</query>
           <earliest>0</earliest>
           <latest></latest>
         </search>
@@ -56,7 +49,7 @@
       <chart>
         <title>Use Cases Discussed (all time)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ |  eval usecaseSplitted=split(use_case, ",") | stats count by usecaseSplitted | sort -count</query>
+          <query>index=splunkevents $eventIdToken$ |  eval usecaseSplitted=split(use_case, ",") | stats count by usecaseSplitted | sort -count</query>
           <earliest>0</earliest>
           <latest></latest>
         </search>
@@ -89,7 +82,7 @@
       <chart>
         <title>Shirts Given Away by Time (all time)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | timechart count</query>
+          <query>index=splunkevents $eventIdToken$ | timechart count</query>
           <earliest>0</earliest>
           <latest></latest>
         </search>
@@ -120,7 +113,7 @@
       <table>
         <title>Companies we've spoken to most (all time)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | rename lead_details.company_email AS email  | eval accountname=split(email,"@")  | eval from_domain=mvindex(accountname,-1)| top limit=10 from_domain | table from_domain, count | sort -count</query>
+          <query>index=splunkevents $eventIdToken$ | rename lead_details.company_email AS email  | eval accountname=split(email,"@")  | eval from_domain=mvindex(accountname,-1)| top limit=10 from_domain | table from_domain, count | sort -count</query>
           <earliest>0</earliest>
           <latest></latest>
         </search>
