--- a/default/data/ui/views/random.xml
+++ b/default/data/ui/views/random.xml
@@ -1,23 +1,14 @@
 <form>
   <label>Prize Draw</label>
   <fieldset submitButton="true">
-    <input type="dropdown" token="indexToken">
-      <label>index</label>
-      <choice value="*">All</choice>
-      <choice value="splunkevents">Live</choice>
-      <choice value="test_splunkevents">Test</choice>
-      <prefix>index=</prefix>
-      <default>*</default>
-    </input>
-    <input type="multiselect" token="eventIdToken">
+    <input type="dropdown" token="eventIdToken">
       <label>event id</label>
       <search>
-        <query>index=* | fields event_id</query>
+        <query>index=splunkevents | fields event_id</query>
       </search>
       <fieldForLabel>event_id</fieldForLabel>
       <fieldForValue>event_id</fieldForValue>
       <prefix>event_id=</prefix>
-      <delimiter>,</delimiter>
       <choice value="*">All Events</choice>
     </input>
     <input type="time" token="field1">
@@ -33,7 +24,7 @@
       <event>
         <title>index=$indexToken$ event_id=$eventIdToken$ | eval Random=random() | sort - Random | head 1</title>
         <search>
-          <query>$indexToken$ $eventIdToken$  | eval Random=random() | sort - Random | head 1</query>
+          <query>index=splunkevents $eventIdToken$  | eval Random=random() | sort - Random | head 1</query>
           <earliest>$field1.earliest$</earliest>
           <latest>$field1.latest$</latest>
         </search>
