--- a/default/data/ui/views/shirtstats.xml
+++ b/default/data/ui/views/shirtstats.xml
@@ -1,22 +1,15 @@
 <form>
   <label>Shirt Stats</label>
   <fieldset submitButton="true">
-    <input type="dropdown" token="indexToken">
-      <label>index</label>
-      <choice value="*">All</choice>
-      <choice value="splunkevents">Live</choice>
-      <choice value="test_splunkevents">Test</choice>
-      <prefix>index=</prefix>
-    </input>
     <input type="multiselect" token="eventIdToken">
       <label>event id</label>
       <search>
-        <query>index=* | fields event_id</query>
+        <query>index=splunkevents | fields event_id</query>
       </search>
       <fieldForLabel>event_id</fieldForLabel>
       <fieldForValue>event_id</fieldForValue>
       <prefix>event_id=</prefix>
-      <delimiter>,</delimiter>
+      <delimiter> OR </delimiter>
       <choice value="*">All Events</choice>
     </input>
   </fieldset>
@@ -25,7 +18,7 @@
       <single>
         <title>Last Shirt Given Away</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | stats latest(shirt_slogan) AS latestShirtSloganGiven</query>
+          <query>index=splunkevents $eventIdToken$ | stats latest(shirt_slogan) AS latestShirtSloganGiven</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
@@ -39,7 +32,7 @@
       <single>
         <title>Shirts Given Away (Today)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | stats count AS ShirtsGivenToday</query>
+          <query>index=splunkevents $eventIdToken$ | stats count AS ShirtsGivenToday</query>
           <earliest>@d</earliest>
           <latest>now</latest>
         </search>
@@ -51,7 +44,7 @@
       <single>
         <title>Shirts Given Away (Hour)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | stats count AS ShirtsGivenAllTime</query>
+          <query>index=splunkevents $eventIdToken$ | stats count AS ShirtsGivenAllTime</query>
           <earliest>-60m@m</earliest>
           <latest>now</latest>
         </search>
@@ -65,7 +58,7 @@
       <map>
         <title>Where Splunk T's Have Been Given Away (Month)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | iplocation host | geostats count by host | sort -count</query>
+          <query>index=splunkevents $eventIdToken$ | iplocation host | geostats count by host | sort -count</query>
           <earliest>@mon</earliest>
           <latest>now</latest>
         </search>
@@ -87,7 +80,7 @@
       <chart>
         <title>The Most Popular Shirt Slogans (Month)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | stats count by shirt_slogan | sort -count</query>
+          <query>index=splunkevents $eventIdToken$ | stats count by shirt_slogan | sort -count</query>
           <earliest>@mon</earliest>
           <latest>now</latest>
         </search>
@@ -118,7 +111,7 @@
       <chart>
         <title>The Most Popular Shirt Sizes (Month)</title>
         <search>
-          <query>$indexToken$ $eventIdToken$ | stats count by shirt_size | sort -count</query>
+          <query>index=splunkevents $eventIdToken$ | stats count by shirt_size | sort -count</query>
           <earliest>@mon</earliest>
           <latest>now</latest>
         </search>
